--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script src="scripts.js" defer></script> 
     <script src="scripts2.js" defer></script> 
     <script src="scripts3.js" defer></script>
+    <script src="scripts4.js" defer></script>
+    <script src="scripts5.js" defer></script> 
 
 </head>
 <body>
@@ -23,4 +25,4 @@
     <main></main>
     <footer></footer> 
 </body>
-</html>
+</html> 
