Resolução da Arrow Function

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="scripts3.js" defer></script>
     <script src="scripts4.js" defer></script>
     <script src="scripts5.js" defer></script> 
+    <script src="scripts6.js" defer></script> 
 
 </head>
 <body>
