Aulas sobre closures, orientação a objeto, DOM

--- a/index.html
+++ b/index.html
@@ -23,7 +23,16 @@
         <input type="button" onclick="sum()">  
     </form>
 
-    <main></main>
-    <footer></footer> 
+    <h1 id="titulo">Meu Título</h1>
+    <p class="text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim voluptates sed nemo necessitatibus eveniet beatae in sit ipsam! In impedit consequuntur labore debitis soluta commodi quisquam similique necessitatibus, excepturi tenetur!</p>
+
+    <p class="text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati nostrum consectetur non. Temporibus architecto tenetur nesciunt, veniam dolores reiciendis distinctio sunt voluptatum dolorem, voluptatibus fuga, commodi molestiae quae. Corrupti, quibusdam.</p>
+
+    <p class="text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia quasi voluptates doloremque reiciendis voluptas dolore repellendus cumque modi obcaecati nam animi, repudiandae ipsam aut id assumenda aspernatur esse maiores fugiat.</p>
+
+    <p class="text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae doloremque enim et ducimus sit quas, ipsam id ab dolore ipsum totam cum quisquam tempore, eum dolorem rem animi ut non?</p> 
+
+    <button id="btn">Clique Aqui!</button>
+    
 </body>
 </html> 
