Exercício 06 sobre fetch()

--- a/Html/index.html
+++ b/Html/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Primeira Página de Back-End Avançado</title>
 
-    <script src="js/scripts6.js" defer></script> 
+    <script src="node-day-01/scripts01.js" defer></script> 
     
 
 </head>
@@ -35,4 +35,4 @@
     <div id="res">O resultado é</div> 
     
 </body>
-</html> 
+</html>  -->
