--- a/DESAFIOS-ATIVIDADES/Desafio4/index.html
+++ b/DESAFIOS-ATIVIDADES/Desafio4/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="../Desafio4/scripts.js" defer></script>
+    <script type="module" src="../Desafio4/main.js" defer></script>
     <title>Archive Include</title>
 </head>
 <body>
 
+    <h1>Como incluir um arquivo de JavaScript em outro</h1>
+    <h3>Atividade 4 - Professor Vcitor</h3>
     
     
 </body>
