correção do nome do professor no h3 do html

--- a/DESAFIOS-ATIVIDADES/Desafio4/index.html
+++ b/DESAFIOS-ATIVIDADES/Desafio4/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <h1>Como incluir um arquivo de JavaScript em outro</h1>
-    <h3>Atividade 4 - Professor Vcitor</h3>
+    <h3>Atividade 4 - Professor Victor</h3>
     
     
 </body>
